yaml_parser/tests/fail/anchor-plus-alias.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 2, column 10
  |
2 | key2: &b *a
  |          ^
expected `...`
